image convert to webp

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- open graph meta tag -->
     <meta property="og:title" content="Dhruba Datta | Portfolio" />
-    <meta property="og:image" content="https://github.com/dhruba-datta/MyPortfolio/blob/main/img/profile-img.jpg" />
+    <meta property="og:image" content="https://github.com/dhruba-datta/MyPortfolio/blob/main/img/profile-img.webp" />
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -141,7 +141,7 @@
           <div class="row">
             <div class="col-lg-4">
               <img
-                src="img/profile-img.jpg"
+                src="img/profile-img.webp"
                 class="img-fluid rounded-circle"
                 alt="dhruba datta"
               />
@@ -477,7 +477,7 @@
           <!-- project 01 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project1.png" class="img-fluid" alt="dhruba datta" />
+              <img src="img/project/project1.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>React App using Google API</h4>
                 <div class="portfolio-links">
@@ -492,7 +492,7 @@
           <!-- project 02 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project2.png" class="img-fluid" alt="dhruba datta" />
+              <img src="img/project/project2.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>Website using HTML, CSS & JS</h4>
                 <div class="portfolio-links">
@@ -506,7 +506,7 @@
           <!-- project 03 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-card"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project3.png" class="img-fluid" alt="dhruba datta" />
+              <img src="img/project/project3.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>My Profile Readme</h4>
                 <div class="portfolio-links">
@@ -520,7 +520,7 @@
           <!-- project 04 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-card"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project4.png" class="img-fluid" alt="dhruba datta" />
+              <img src="img/project/project4.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>Leetcode</h4>
                 <div class="portfolio-links">
@@ -533,7 +533,7 @@
           <!-- project 05 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project5.png" class="img-fluid" alt="dhruba datta" />
+              <img src="img/project/project5.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>Academic Project in C++</h4>
                 <div class="portfolio-links">
@@ -545,7 +545,7 @@
           <!-- project 06 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-card"> 
               <div class="portfolio-wrap">
-                <img src="img/project/project6.png" class="img-fluid" alt="dhruba datta" />
+                <img src="img/project/project6.webp" class="img-fluid" alt="dhruba datta" />
                 <div class="portfolio-info">
                   <h4>Follow me for future updates</h4>
                   <div class="portfolio-links">
@@ -558,7 +558,7 @@
           <!-- project 07 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-card"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project7.png" class="img-fluid" alt="dhruba datta" />
+              <img src="img/project/project7.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>Watch my designs on Behance</h4>
                 <div class="portfolio-links">
