--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <meta content="I'm Dhruba, currently an undergraduate student at Delhi Technological University(DTU), pursuing B.Tech in Software Engineering(SE)." name="description" />
     <meta content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta, dhruba_anjan, Anjan, portfolio, personal website, website, dhaka, bangladesh, DTU, delhi, Delhi Technological University" name="keywords" />
 
-    <!-- open graph meta tag -->
-    <meta property="og:title" content="Dhruba Datta | Portfolio" />
-    <meta property="og:image" content="https://github.com/dhruba-datta/MyPortfolio/blob/main/img/profile-img.webp" />
-
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
@@ -141,7 +137,7 @@
           <div class="row">
             <div class="col-lg-4">
               <img
-                src="img/profile-img.webp"
+                src="img/profile-img.jpg"
                 class="img-fluid rounded-circle"
                 alt="dhruba datta"
               />
