add google analytics

--- a/index.html
+++ b/index.html
@@ -49,7 +49,16 @@
     <!-- Template Main CSS File -->
     <link href="index.css" rel="stylesheet" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <meta name="google-site-verification" content="_UA5GaPcHAKs6l4HYDENA87elTsKKft272vV6o5nMQg" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GZJE2T5D5L"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-GZJE2T5D5L');
+    </script>
+
   </head>
 
   <body>
