open graph added

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
       rel="stylesheet" 
     />
 
+    <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
+    <meta property="og:title" content="Dhruba Datta | Portfolio"> 
+    <meta property="og:description" content="I'm Dhruba, currently an undergraduate student at DTU.">
+    <meta property="og:image" content="img/profile-img.jpg">
+    <meta name="twitter:card" content="img/hero-bg.webp">
+
     <!-- Vendor CSS Files -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="vendor/icofont/icofont.min.css" rel="stylesheet" />
