--- a/index.html
+++ b/index.html
@@ -580,7 +580,20 @@
               </div>
             </div>
         </div>
-
+          <!-- project 08 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card"> 
+            <div class="portfolio-wrap">
+              <img src="img/project/project8.webp" class="img-fluid" alt="dhruba datta" />
+              <div class="portfolio-info">
+                <h4>Join DIscord Server</h4>
+                <div class="portfolio-links">
+                  <a href="https://discord.gg/zazf3BgJK7" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Behance">
+                    <i class='bx bxl-discord' ></i>
+                  </a> 
+                  </div>
+              </div>
+            </div>
+        </div>
 
 
 
@@ -674,8 +687,10 @@
             href="https://discord.gg/zazf3BgJK7"
             target="_blank"
             class="discord"
-            ><i class="bx bxl-discord"></i
-          ></a>
+            >
+            <i class='bx bxl-discord'></i 
+          >
+        </a>
           <a
             href="https://www.instagram.com/dhrubz_/"
             target="_blank"
