--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
             <div class="portfolio-wrap">
               <img src="img/project/project8.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
-                <h4>Join DIscord Server</h4>
+                <h4>Join Discord Server</h4>
                 <div class="portfolio-links">
                   <a href="https://discord.gg/zazf3BgJK7" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Behance">
                     <i class='bx bxl-discord' ></i>
