--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       gtag('js', new Date());
       gtag('config', 'G-GZJE2T5D5L');
     </script>
+    <link rel="canonical" href="https://dhruba-datta.netlify.app" />
 
   </head>
 
