Open graph updated

--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
       rel="stylesheet" 
     />
 
-    <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
+    <!-- Open Graph -->
     <meta property="og:title" content="Dhruba Datta | Portfolio"> 
-    <meta property="og:description" content="I'm Dhruba, currently an undergraduate student at DTU.">
-    <meta property="og:image" content="img/profile-img.jpg">
-    <meta name="twitter:card" content="img/hero-bg.webp">
+    <meta property="og:image" content="https://dhruba-datta.netlify.app/img/profile-img.jpg" />
+    <meta property="og:description" content="I'm Dhruba, currently an undergraduate student at Delhi Technological University(DTU), pursuing B.Tech in Software Engineering(SE)." />
 
     <!-- Vendor CSS Files -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
