--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Dhruba Datta | Portfolio"> 
     <meta property="og:image" content="https://dhruba-datta.netlify.app/img/profile-img.jpg" />
-    <meta property="og:description" content="I'm Dhruba, currently an undergraduate student at Delhi Technological University(DTU), pursuing B.Tech in Software Engineering(SE)." />
+    <meta property="og:description" content="I'm Dhruba, currently an undergraduate student at Delhi Technological University(DTU)." />
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
