--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Open Graph -->
     <meta property="og:title" content="Dhruba Datta | Portfolio"> 
-    <meta property="og:image" content="https://dhruba-datta.netlify.app/img/profile-img.jpg" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/74358627?v=4" />
     <meta property="og:description" content="I'm Dhruba, currently an undergraduate student at Delhi Technological University(DTU)." />
 
     <!-- Favicons -->
