--- a/index.html
+++ b/index.html
@@ -73,10 +73,8 @@
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
-      </nav>
-      <!-- .nav-menu -->
-    </header>
-    <!-- End Header -->
+      </nav> <!-- .nav-menu -->
+    </header> <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
