--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
-      </nav> <!-- .nav-menu -->
+      </nav>
     </header> <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
