--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="36x36" href="img/favicon/android-icon-36x36.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="img/favicon/android-icon-48x48.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="img/favicon/android-icon-72x72.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/android-icon-96x96.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="img/favicon/android-icon-144x144.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-icon-192x192.png">
     <link rel="icon" type="image/x-icon" href="img/favicon/favicon.ico" >
     <link rel="manifest" href="img/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
