--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"  />
 
-    <!-- Vendor CSS Files -->
+    <!-- CSS Files -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="vendor/icofont/icofont.min.css" rel="stylesheet" />
     <link href="vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
     <link href="vendor/aos/aos.css" rel="stylesheet" />
-
-    <!-- Template Main CSS File -->
     <link href="index.css" rel="stylesheet" />
     <link rel="canonical" href="https://dhruba-datta.netlify.app" />
 
@@ -66,11 +64,11 @@
       <p class="font-weight-bold"> Hello, I'm </p> <h1>DHRUBA DATTA</h1>
       <p class="font-weight-bold"> I'm a <span class="typed" data-typed-items="Software Engineering Student, Scholarship Holder, Web Developer, Competitive Coder, Photographer, Content Creator"></span> </p>
       <div class="social-links">
-      <a href="https://github.com/dhruba-datta" target="_blank" class="GitHub"><i class="bx bxl-github"></i></a>
-      <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
-      <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-      <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
-      <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/dhruba-datta" target="_blank" class="GitHub"><i class="bx bxl-github"></i></a>
+        <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
+        <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
+        <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       </div>
     </section>
@@ -105,7 +103,7 @@
         </div>
         </div>
         </div>
-        </section>
+      </section>
 
       <!-- ======= Facts Section ======= -->
       <section id="facts" class="facts">
