--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     
     <title>Dhruba Datta | Portfolio</title>
-    <meta content="I'm Dhruba Datta, currently an undergraduate student at Delhi Technological University(DTU), pursuing B.Tech in Software Engineering(SE)." name="description" />
+    <meta content="Hey there, I'm Dhruba Datta, currently an undergraduate student at Delhi Technological University(DTU), pursuing B.Tech in Software Engineering(SE)." name="description" />
     <meta content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, Dhrubo, Dhrubo Datta, Dhrubo Datta Anjan, Dhruba Dutta, Dhruba Dutta Anjan, Dhruv, Dhruv Dutta, Dhruv Datta, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta-anjan, dhruba-datta, dhruba_anjan, Anjan, portfolio, personal website, website, dhaka, bangladesh, DTU, delhi, Delhi Technological University" name="keywords" />
     
     <!-- Open Graph -->
