--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
       <p class="font-weight-bold"> Hello, I'm </p> <h1>DHRUBA DATTA</h1>
       <p class="font-weight-bold"> I'm a <span class="typed" data-typed-items="Software Engineering Student, Scholarship Holder, Web Developer, Competitive Coder, Photographer, Content Creator"></span> </p>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
+        <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i class="bx bxl-linkedin-square"></i></a>
+        <a href="https://github.com/dhruba-datta" target="_blank" class="GitHub"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
-        <a href="https://github.com/dhruba-datta" target="_blank" class="GitHub"><i class="bx bxl-github"></i></a>
+        <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
       </div>
       </div>
     </section>
