--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
         <div class="col-lg-6">
         <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
-          <h4>Dhruba Datta</h4> <p> A student of Software Engineering at Delhi Technological University(DTU) in final year pursuing in B.Tech with experience in innovative project management and development </p>
+          <h4>Dhruba Datta</h4> <p> A student of Software Engineering at Delhi Technological University(DTU) in final year pursuing in B.Tech with experience in innovative project management and development. </p>
             <ul>
             <li>Current City: Delhi, India</li>
-            <li>From: Dhaka, Bangladesh</li>
+            <li>Hometown: Dhaka, Bangladesh</li>
             <li>Phone: +91 70445*****</li>
             <li>Email: dhrubadattaanjan@gmail.com</li>
             </ul>
@@ -198,7 +198,7 @@
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Experience</h3>
-          <div class="resume-item"> <h4>Ruts Digital</h4> <h5>July 2022 - Present</h5> <p> <em>Dhaka, Bangladesh</em> </p>
+          <div class="resume-item"> <h4>Ruts Digital</h4> <h5>July 2022 - August 2022</h5> <p> <em>Dhaka, Bangladesh</em> </p>
             <ul>
             <li> A digital marketing agency providing website designing, SMM, brand manage & many more in Bangladesh. </li>
             <li> Worked as web developer intern, created UI design.</li>
