--- a/index.html
+++ b/index.html
@@ -179,21 +179,23 @@
           <div class="resume-item pb-0">
           <h4>Dhruba Datta</h4> <p> A student of Software Engineering at Delhi Technological University(DTU) in final year pursuing in B.Tech with experience in innovative project management and development. </p>
             <ul>
-            <li>Current City: Delhi, India</li>
-            <li>Hometown: Dhaka, Bangladesh</li>
+            <li>City: Dhaka, Bangladesh</li>
             <li>Phone: +91 70445*****</li>
             <li>Email: dhrubadattaanjan@gmail.com</li>
             </ul>
           </div>
         <h3 class="resume-title">Education</h3>
           <div class="resume-item"> <h4>Bachelor of Technology (B.Tech)</h4> <h5>August 2019 - Present</h5> <p><em>Delhi Technological University, New Delhi, India</em></p>
-          <p> Currently, I am studying Software Engineering to enhance my knowledge. And presently studying in one of the great universities of India is challenging my problem-solving skills, extend the range and volume of my academic experience and developing my knowledge and potential for which I'm pretty much grateful. </p>
+          <h6>CGPA: 8.12/10.00</h6>
+          <p> Currently, I am studying Software Engineering to enhance my knowledge. And presently studying in one of the great universities of India is challenging my problem-solving skills, extend the range and volume of my academic experience and developing my knowledge and potential for which I'm pretty much grateful. </p> 
           </div>
           <div class="resume-item"> <h4>Higher Secondary Certificate (HSC)</h4> <h5>April 2016 - August 2018</h5> <p><em>Dhaka College, Dhaka, Bangladesh</em></p>
+          <h6>GPA: 5.00/5.00</h6>
           <p> In college discovering a whole new space of multimedia and social platforms caught my gaze for technology and many more. </p>
           </div>
           <div class="resume-item"> <h4>Secondary School Certificate (SSC)</h4> <h5>January 2006 - March 2016</h5> <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
-          <p> Back in school days participating in events for science fair particularly brought out the love for science. I spent one of the best parts here. This place built me whatever I'm now. </p>
+          <h6>GPA: 5.00/5.00</h6>
+          <p> Back in school days participating in events for science fair particularly brought out the love for science. I spent one of the best parts here. This place built me whatever I'm now. </p> 
           </div>
         </div>
         <div class="col-lg-6">
