--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <div class="resume-item pb-0">
           <h4>Dhruba Datta</h4> <p> A student of Software Engineering at Delhi Technological University(DTU) in final year pursuing in B.Tech with experience in innovative project management and development. </p>
             <ul>
-            <li>City: Dhaka, Bangladesh</li>
+            <li>From: Dhaka, Bangladesh</li>
             <li>Phone: +91 70445*****</li>
             <li>Email: dhrubadattaanjan@gmail.com</li>
             </ul>
@@ -199,17 +199,14 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Experience</h3>
+        <h3 class="resume-title">Experience</h3>
           <div class="resume-item"> <h4>Ruts Digital</h4> <h5>July 2022 - August 2022</h5> <p> <em>Dhaka, Bangladesh</em> </p>
-            <ul>
-            <li> A digital marketing agency providing website designing, SMM, brand manage & many more in Bangladesh. </li>
-            <li> Worked as web developer intern, created UI design.</li>
-            </ul>
+            <h6>Web/UI Developer Intern</h6>
+            <p>A digital marketing agency providing website designing, SMM, brand manage & many more in Bangladesh. Worked as web developer intern, created UI design.
+            </p>
           </div>
           <div class="resume-item"> <h4>Mentor</h4> <h5>December 2018 - July 2019</h5> <p> <em>Dhaka, Bangladesh</em> </p>
-            <ul>
-            <li> Meanwhile, I tutored 10th & 12th class students on various subjects encompassing Maths, Physics & ICT while applying abroad for higher studies. </li>
-            </ul>
+            <p>Meanwhile, I tutored 10th & 12th class students on various subjects encompassing Maths, Physics & ICT while applying abroad for higher studies. </p>
           </div>
           <h3 class="resume-title">Skills & Achievements</h3>
           <div class="resume-item"> <h4>Skills</h4>
