--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <a href="https://github.com/dhruba-datta" target="_blank" class="GitHub"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
-        <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
+        <a href="https://t.me/dhrubzzz" target="_blank" class="telegram"><i class="bx bxl-telegram"></i></a>
       </div>
       </div>
     </section>
