--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#skill" class="nav-link scrollto"><i class="icofont-paper-plane"></i> <span>Skills</span></a></li>
+        <li><a href="#skill"><i class='bx bx-pulse' ></i> <span>Skills</span></a></li>
         <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
