--- a/index.html
+++ b/index.html
@@ -201,12 +201,11 @@
         <div class="col-lg-6">
         <h3 class="resume-title">Experience</h3>
           <div class="resume-item"> <h4>Ruts Digital</h4> <h5>July 2022 - August 2022</h5> <p> <em>Dhaka, Bangladesh</em> </p>
-            <h6>Web/UI Developer Intern</h6>
-            <p>A digital marketing agency providing website designing, SMM, brand manage & many more in Bangladesh. Worked as web developer intern, created UI design.
-            </p>
+          <h6>Web/UI Developer Intern</h6>
+          <p>A digital marketing agency providing website designing, SMM, brand manage & many more in Bangladesh. Worked as web developer intern, created UI design. </p>
           </div>
           <div class="resume-item"> <h4>Mentor</h4> <h5>December 2018 - July 2019</h5> <p> <em>Dhaka, Bangladesh</em> </p>
-            <p>Meanwhile, I tutored 10th & 12th class students on various subjects encompassing Maths, Physics & ICT while applying abroad for higher studies. </p>
+          <p>Meanwhile, I tutored 10th & 12th class students on various subjects encompassing Maths, Physics & ICT while applying abroad for higher studies. </p>
           </div>
           <h3 class="resume-title">Skills & Achievements</h3>
           <div class="resume-item"> <h4>Skills</h4>
@@ -216,8 +215,6 @@
             <li>Tools: ReactJS, Tailwind, Bootstrap, NodeJS, MongoDB, MySQL</li>
             <li>Cloud Platforms: Heroku, GitHub, Netlify</li>
             <li>Other Skills: SEO, Web Design, UI/UX Design, Video/Photo Editing</li>
-            <!-- <li>Logical Thinking & Problem Solving</li> -->
-            <!-- <li>Interpersonal communication skills</li> -->
             <li>Fluently speak 3 Languages: English, Bengali, Hindi</li>
             </ul>
           </div>
