--- a/index.html
+++ b/index.html
@@ -210,19 +210,19 @@
           <h3 class="resume-title">Skills & Achievements</h3>
           <div class="resume-item"> <h4>Skills</h4>
             <ul>
-            <li>Frontend developer with knowledge of Backend</li>
-            <li>Programming Languages: C++, C, HTML, CSS, JavaScript</li>
-            <li>Tools: ReactJS, Tailwind, Bootstrap, NodeJS, MongoDB, MySQL</li>
-            <li>Cloud Platforms: Heroku, GitHub, Netlify</li>
-            <li>Other Skills: SEO, Web Design, UI/UX Design, Video/Photo Editing</li>
-            <li>Fluently speak 3 Languages: English, Bengali, Hindi</li>
+            <li>Frontend developer with knowledge of Backend.</li>
+            <li>Programming Languages: C++, C, HTML, CSS, JavaScript.</li>
+            <li>Tools: ReactJS, Tailwind, Bootstrap, NodeJS, MongoDB, MySQL.</li>
+            <li>Cloud Platforms: Heroku, GitHub, Netlify.</li>
+            <li>Other Skills: SEO, Web Design, UI/UX Design, Video/Photo Editing.</li>
+            <li>Fluently speak 3 Languages: English, Bengali, Hindi.</li>
             </ul>
           </div>
           <div class="resume-item"> <h4>Achievements</h4>
             <ul>
             <li>Government Scholarship Holder by "Indian Council for Cultural Relations [ICCR]", which offers cost-free educational scholarships along with pretty generous stipends per month.</li>
-            <li>Have a raputation of 2k+ with over 50k+ views in Leetcode</li>
-            <li>Certificate of excellence in "DRMC National Science Festival" & "SGHS Inter School Science Festival" </li>
+            <li>Have a raputation of 2k+ with over 50k+ views in Leetcode.</li>
+            <li>Certificate of excellence in "DRMC National Science Festival" & "SGHS Inter School Science Festival". </li>
             </ul>
           </div>
         </div>
