--- a/index.html
+++ b/index.html
@@ -186,15 +186,15 @@
           </div>
         <h3 class="resume-title">Education</h3>
           <div class="resume-item"> <h4>Bachelor of Technology (B.Tech)</h4> <h5>August 2019 - Present</h5> <p><em>Delhi Technological University, New Delhi, India</em></p>
-          <h6>CGPA: 8.12/10.00</h6>
+          <h6>CGPA: 8.12/10.00 (Software Engineering)</h6>
           <p> Currently, I am studying Software Engineering to enhance my knowledge. And presently studying in one of the great universities of India is challenging my problem-solving skills, extend the range and volume of my academic experience and developing my knowledge and potential for which I'm pretty much grateful. </p> 
           </div>
           <div class="resume-item"> <h4>Higher Secondary Certificate (HSC)</h4> <h5>April 2016 - August 2018</h5> <p><em>Dhaka College, Dhaka, Bangladesh</em></p>
-          <h6>GPA: 5.00/5.00</h6>
+          <h6>GPA: 5.00/5.00 (Science)</h6>
           <p> In college discovering a whole new space of multimedia and social platforms caught my gaze for technology and many more. </p>
           </div>
           <div class="resume-item"> <h4>Secondary School Certificate (SSC)</h4> <h5>January 2006 - March 2016</h5> <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
-          <h6>GPA: 5.00/5.00</h6>
+          <h6>GPA: 5.00/5.00 (Science)</h6>
           <p> Back in school days participating in events for science fair particularly brought out the love for science. I spent one of the best parts here. This place built me whatever I'm now. </p> 
           </div>
         </div>
@@ -207,7 +207,7 @@
           <div class="resume-item"> <h4>Mentor</h4> <h5>December 2018 - July 2019</h5> <p> <em>Dhaka, Bangladesh</em> </p>
           <p>Meanwhile, I tutored 10th & 12th class students on various subjects encompassing Maths, Physics & ICT while applying abroad for higher studies. </p>
           </div>
-          <h3 class="resume-title">Skills & Achievements</h3>
+          <h3 class="resume-title">Others</h3>
           <div class="resume-item"> <h4>Skills</h4>
             <ul>
             <li>Frontend developer with knowledge of Backend.</li>
