--- a/index.html
+++ b/index.html
@@ -180,39 +180,43 @@
           <h4>Dhruba Datta</h4> <p> A student of Software Engineering at Delhi Technological University(DTU) in final year pursuing in B.Tech with experience in innovative project management and development. </p>
             <ul>
             <li>From: Dhaka, Bangladesh</li>
-            <li>Phone: +91 70445*****</li>
             <li>Email: dhrubadattaanjan@gmail.com</li>
             </ul>
           </div>
         <h3 class="resume-title">Education</h3>
           <div class="resume-item"> <h4>Bachelor of Technology (B.Tech)</h4> <h5>August 2019 - Present</h5> <p><em>Delhi Technological University, New Delhi, India</em></p>
           <h6>CGPA: 8.12/10.00 (Software Engineering)</h6>
-          <p> Currently, I am studying Software Engineering to enhance my knowledge. And presently studying in one of the great universities of India is challenging my problem-solving skills, extend the range and volume of my academic experience and developing my knowledge and potential for which I'm pretty much grateful. </p> 
+          <!-- <p> Currently, I am studying Software Engineering to enhance my knowledge. And presently studying in one of the great universities of India is challenging my problem-solving skills, extend the range and volume of my academic experience and developing my knowledge and potential for which I'm pretty much grateful. </p>  -->
           </div>
           <div class="resume-item"> <h4>Higher Secondary Certificate (HSC)</h4> <h5>April 2016 - August 2018</h5> <p><em>Dhaka College, Dhaka, Bangladesh</em></p>
           <h6>GPA: 5.00/5.00 (Science)</h6>
-          <p> In college discovering a whole new space of multimedia and social platforms caught my gaze for technology and many more. </p>
+          <!-- <p> In college discovering a whole new space of multimedia and social platforms caught my gaze for technology and many more. </p> -->
           </div>
           <div class="resume-item"> <h4>Secondary School Certificate (SSC)</h4> <h5>January 2006 - March 2016</h5> <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
           <h6>GPA: 5.00/5.00 (Science)</h6>
-          <p> Back in school days participating in events for science fair particularly brought out the love for science. I spent one of the best parts here. This place built me whatever I'm now. </p> 
+          <!-- <p> Back in school days participating in events for science fair particularly brought out the love for science. I spent one of the best parts here. This place built me whatever I'm now. </p>  -->
           </div>
-        </div>
-        <div class="col-lg-6">
-        <h3 class="resume-title">Experience</h3>
+          <h3 class="resume-title">Experience</h3>
           <div class="resume-item"> <h4>Ruts Digital</h4> <h5>July 2022 - August 2022</h5> <p> <em>Dhaka, Bangladesh</em> </p>
           <h6>Web/UI Developer Intern</h6>
           <p>A digital marketing agency providing website designing, SMM, brand manage & many more in Bangladesh. Worked as web developer intern, created UI design. </p>
           </div>
+        </div>
+        <div class="col-lg-6">
+        <h3 class="resume-title">Volunteering</h3>
           <div class="resume-item"> <h4>Mentor</h4> <h5>December 2018 - July 2019</h5> <p> <em>Dhaka, Bangladesh</em> </p>
           <p>Meanwhile, I tutored 10th & 12th class students on various subjects encompassing Maths, Physics & ICT while applying abroad for higher studies. </p>
           </div>
-          <h3 class="resume-title">Others</h3>
+          <div class="resume-item"> <h4>Help Bangladesh</h4> <h5>May 2017 - July 2019</h5> <p> <em>Dhaka, Bangladesh</em> </p>
+            <p>Co-founded an organization to help street children. Providing more than 50 children with basic needs such as food and education, along with 100+ team members. </p>
+            </div>
+        <h3 class="resume-title">Others</h3>
           <div class="resume-item"> <h4>Skills</h4>
             <ul>
             <li>Frontend developer with knowledge of Backend.</li>
             <li>Programming Languages: C++, C, HTML, CSS, JavaScript.</li>
-            <li>Tools: ReactJS, Tailwind, Bootstrap, NodeJS, MongoDB, MySQL.</li>
+            <li>Frameworks: ReactJS, Tailwind, Bootstrap, NodeJS.</li>
+            <li>Database: MongoDB, MySQL, Sanity.</li>
             <li>Cloud Platforms: Heroku, GitHub, Netlify.</li>
             <li>Other Skills: SEO, Web Design, UI/UX Design, Video/Photo Editing.</li>
             <li>Fluently speak 3 Languages: English, Bengali, Hindi.</li>
