--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               <div class="portfolio-wrap"> <img src="img/project/project8.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info"> <h4>Join Discord Server</h4>
               <div class="portfolio-links">
-                <a href="https://discord.gg/zazf3BgJK7" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Behance"> <i class='bx bxl-discord'></i> </a>
+                <a href="https://discord.gg/zazf3BgJK7" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Discord"> <i class='bx bxl-discord'></i> </a>
               </div>
               </div>
               </div>
