--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
           <!-- <p> Back in school days participating in events for science fair particularly brought out the love for science. I spent one of the best parts here. This place built me whatever I'm now. </p>  -->
           </div>
           <h3 class="resume-title">Experience</h3>
-          <div class="resume-item"> <h4>Ruts Digital</h4> <h5>June 2022 - July 2022</h5> <p> <em>Dhaka, Bangladesh</em> </p>
-          <h6>Web/UI Developer Intern</h6>
-          <p>A digital marketing agency providing website designing, SMM, brand manage & many more in Bangladesh. Worked as web developer intern, created UI design. </p>
+          <div class="resume-item"> <h4>Revinns Limited</h4> <h5>June 2022 - July 2022</h5> <p> <em>Dhaka, Bangladesh</em> </p>
+          <h6>Web Developer Intern</h6>
+          <p>Designed the Ui/Ux of various micro websites, landing pages, web applications and also to implement them in the front-end, through this time period.</p>
           </div>
         </div>
         <div class="col-lg-6">
