--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <h3 class="resume-title">Experience</h3>
           <div class="resume-item"> <h4>Revinns Limited</h4> <h5>June 2022 - July 2022</h5> <p> <em>Dhaka, Bangladesh</em> </p>
           <h6>Web Developer Intern</h6>
-          <p>Designed the Ui/Ux of various micro websites, landing pages, web applications and also to implement them in the front-end, through this time period.</p>
+          <p>Designed the Ui/Ux of various micro websites, landing pages, and web applications and implemented them in the front-end through this period.</p>
           </div>
         </div>
         <div class="col-lg-6">
