new project added

--- a/index.html
+++ b/index.html
@@ -251,32 +251,32 @@
             <!-- project 01 -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap"> <img src="img/project/project1.webp" class="img-fluid" alt="dhruba datta" />
-              <div class="portfolio-info"> <h4>React App using Google API</h4>
+              <div class="portfolio-info"> <h4>Cryto app using Rapid API.</h4>
               <div class="portfolio-links">
-                <a href="https://github.com/dhruba-datta/photoBooth" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
-                <a href="https://phootobooth.netlify.app" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/dhruba-datta/CryptoVerse" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
+                <a href="https://cryptoverse20.netlify.app" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
               </div>
               </div>
               </div>
             </div>
             <!-- project 02 -->
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap"> <img src="img/project/project2.webp" class="img-fluid" alt="dhruba datta" />
-              <div class="portfolio-info"> <h4>Website using HTML, CSS & JS</h4>
+              <div class="portfolio-info"> <h4>My Profile Readme</h4>
               <div class="portfolio-links">
-                <a href="https://github.com/dhruba-datta/EasyCooking" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
-                <a href="https://dhruba-datta.github.io/EasyCooking/" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/dhruba-datta"target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Profile"><i class="bx bxl-github"></i></a>
+                <a href="https://github.com/dhruba-datta/dhruba-datta" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Repository Details"><i class="bx bx-link"></i></a>
               </div>
               </div>
               </div>
             </div>
             <!-- project 03 -->
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap"> <img src="img/project/project3.webp" class="img-fluid" alt="dhruba datta" />
-              <div class="portfolio-info"> <h4>My Profile Readme</h4>
+              <div class="portfolio-info"> <h4>React App using Google API</h4>
               <div class="portfolio-links">
-                <a href="https://github.com/dhruba-datta"target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Profile"><i class="bx bxl-github"></i></a>
-                <a href="https://github.com/dhruba-datta/dhruba-datta" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Repository Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/dhruba-datta/photoBooth" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
+                <a href="https://phootobooth.netlify.app" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
               </div>
               </div>
               </div>
@@ -295,9 +295,10 @@
             <!-- project 05 -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap"> <img src="img/project/project5.webp" class="img-fluid" alt="dhruba datta" />
-              <div class="portfolio-info"> <h4>Academic Project in C++</h4>
+              <div class="portfolio-info"> <h4>Website using HTML, CSS & JS</h4>
               <div class="portfolio-links">
-                <a href="https://github.com/dhruba-datta/FoodOrderingSystem" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
+                <a href="https://github.com/dhruba-datta/EasyCooking" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
+                <a href="https://dhruba-datta.github.io/EasyCooking/" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
               </div>
               </div>
               </div>
@@ -324,8 +325,18 @@
               </div>
             </div>
             <!-- project 08 -->
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap"> <img src="img/project/project8.webp" class="img-fluid" alt="dhruba datta" />
+              <div class="portfolio-info"> <h4>Academic Project in C++</h4>
+              <div class="portfolio-links">
+                <a href="https://github.com/dhruba-datta/FoodOrderingSystem" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
+              </div>
+              </div>
+              </div>
+            </div>
+            <!-- project 09 -->
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+              <div class="portfolio-wrap"> <img src="img/project/project9.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info"> <h4>Join Discord Server</h4>
               <div class="portfolio-links">
                 <a href="https://discord.gg/zazf3BgJK7" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Discord"> <i class='bx bxl-discord'></i> </a>
