updated resume section

--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@
           </div>
           <div class="resume-item"> <h4>Achievements</h4>
             <ul>
-            <li>Recipient of an Indian Council for Cultural Relations (ICCR) Government Scholarship, which provides cost-free education and a monthly stipend. </li>
-            <li>LeetCode Reputation of 2.7K+ with over 101K+ views. </li> 
+            <li>Recipient of Indian Council for Cultural Relations Government Scholarship, provides cost-free education & monthly stipend. </li>
+            <li>Having a personal portfolio ranked on Google. </li>
+            <li>LeetCode Reputation of 2.7K+ with over 111K+ views. </li> 
             <li>Awarded certificates of excellence in the "DRMC National Science Festival" and "SGHS Inter School Science Festival". </li>
             </ul>
           </div>
