--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="col-lg-4"> <img src="img/profile-img.jpg" class="img-fluid rounded-circle" alt="dhruba datta" /> </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content">
         <p class="font-weight-normal"> <h3> Hey there! </h3> 
-          I'm an undergraduate student at Delhi Technological University (DTU), pursuing a B.Tech degree in Software Engineering. My skillset includes experience in data structure & algorithms, front-end development, UI/UX design, and machine learning. I also have a passion for photography, videography and reading books. With a diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and make meaningful contributions. 
+          I'm an undergraduate student at Delhi Technological University (DTU), pursuing a B.Tech degree in Software Engineering. My skillset includes experience in data structure & algorithms, front-end development, UI/UX design and machine learning. I also have a passion for photography, videography and reading books. With a diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and make meaningful contributions. 
           <br> <hr> </p>
         <div class="row">
           <div class="col-lg-6">
