--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="col-lg-6">
         <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
-          <h4>Dhruba Datta</h4> <p> A software engineering student with skills in data structure & algorithms, front-end development & UI/UX design, continually expanding knowledge through learning new technologies.  </p>
+          <h4>Dhruba Datta</h4> <p> A software engineering student skilled in data structure & algorithms, front-end development & UI/UX design, continuously expanding knowledge through learning new technologies.  </p>
             <ul>
             <li>Hometown: Dhaka, Bangladesh</li>
             <li>Email: dhrubadattaanjan@gmail.com</li>
@@ -204,10 +204,10 @@
         <div class="col-lg-6">
         <h3 class="resume-title">Volunteering</h3>
           <div class="resume-item"> <h4>Mentor</h4> <h5>December 2018 - July 2019</h5> <p> <em>Dhaka, Bangladesh</em> </p>
-          <p>While applying for higher education, I assisted high school students of 10th and 12th grade in subjects including Maths, Physics, and ICT as a tutor. </p>
+          <p>While applying for higher education, I assisted high school students of 10th and 12th grade in subjects including Maths, Physics, and ICT. </p>
           </div>
           <div class="resume-item"> <h4>Help Bangladesh</h4> <h5>May 2017 - July 2019</h5> <p> <em>Dhaka, Bangladesh</em> </p>
-            <p>Co-founded a group aimed to help and support street children, providing basic needs such as food and education for over 50 children with a team of more than 100 members. </p>
+            <p>Co-founded a group aimed to help and support street children, providing basic needs such as food & education for over hundred children with a team of more than fifty members. </p>
             </div>
         <h3 class="resume-title">Others</h3>
           <div class="resume-item"> <h4>Skills</h4>
